# botcoder

./: .env.example  .gitignore  Cargo.toml  README.md  prompt.txt
src/: app.rs  chat.rs  executor.rs  limiter.rs  llm.rs  main.rs  parser.rs  tools.rs  tpm_limiter.rs  ui.rs
