[package]
name = "botcoder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
dotenvy = "0.15.7"
log = "0.4.28"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
env_logger = "0.11.0"
